--- a/1_SciProg_Python_basics.ipynb
+++ b/1_SciProg_Python_basics.ipynb
@@ -486,7 +486,7 @@
         }
       ],
       "source": [
-        "4//2"
+        "4//2 # a = b*c + d, discard d then find a/b = c aka return quotient, discard remainder"
       ]
     },
     {
@@ -555,7 +555,7 @@
         }
       ],
       "source": [
-        "6%3"
+        "6%3 # given a = b*c + d, return d aka return remainder, discard quotient"
       ]
     },
     {
