--- a/MichailSeth_E1.ipynb
+++ b/MichailSeth_E1.ipynb
@@ -943,26 +943,22 @@
       "source": [
         "#for i in range(5) means start at 0, increment by one, stop at (not including) 5\n",
         "for i in range(5):\n",
-        "  print(i)"
+        "  print(i, end=' ')"
       ],
       "metadata": {
         "id": "DOnUVeadbogi",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b4fd1d02-3fe3-4321-a228-178bc1bb3b65"
+        "outputId": "3c3ab1e1-5c14-44d4-e506-7480c5d54879"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n"
+            "0 1 2 3 4 "
           ]
         }
       ]
@@ -972,31 +968,22 @@
       "source": [
         "#simplified way to reverse a for loop...\n",
         "for i in reversed(range(0,50,5)):\n",
-        "  print(i)"
+        "  print(i, end=' ')"
       ],
       "metadata": {
         "id": "hYxm4tsWYQrp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e8f1e324-a394-4dda-c50d-69cda6e5ab26"
+        "outputId": "71093ccf-6fc7-41b0-93f6-0c445d134388"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "45\n",
-            "40\n",
-            "35\n",
-            "30\n",
-            "25\n",
-            "20\n",
-            "15\n",
-            "10\n",
-            "5\n",
-            "0\n"
+            "45 40 35 30 25 20 15 10 5 0 "
           ]
         }
       ]
@@ -1006,31 +993,22 @@
       "source": [
         "#...which is equivalent to (note in/decrement applied at end of loop cycle)\n",
         "for i in range(45,-1,-5):\n",
-        "  print(i)"
+        "  print(i, end=' ')"
       ],
       "metadata": {
         "id": "5K8Ykp54cGDU",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0e6139f8-f8ec-462c-c0ef-9756de3d68f9"
+        "outputId": "4a1f5812-32cd-4bea-931e-6be5624b4e63"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "45\n",
-            "40\n",
-            "35\n",
-            "30\n",
-            "25\n",
-            "20\n",
-            "15\n",
-            "10\n",
-            "5\n",
-            "0\n"
+            "45 40 35 30 25 20 15 10 5 0 "
           ]
         }
       ]
@@ -1083,122 +1061,22 @@
       "source": [
         "#101 so that 100 is included in the printing\n",
         "for i in range(101):\n",
-        "  print(i)"
+        "  print(i, end=' ')"
       ],
       "metadata": {
         "id": "fAn5eJLldsvZ",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25321f60-2ffa-4c4a-db1a-00143f5107ec"
+        "outputId": "b29995c4-bb38-41e8-aef3-5148908982bb"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n",
-            "1\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "5\n",
-            "6\n",
-            "7\n",
-            "8\n",
-            "9\n",
-            "10\n",
-            "11\n",
-            "12\n",
-            "13\n",
-            "14\n",
-            "15\n",
-            "16\n",
-            "17\n",
-            "18\n",
-            "19\n",
-            "20\n",
-            "21\n",
-            "22\n",
-            "23\n",
-            "24\n",
-            "25\n",
-            "26\n",
-            "27\n",
-            "28\n",
-            "29\n",
-            "30\n",
-            "31\n",
-            "32\n",
-            "33\n",
-            "34\n",
-            "35\n",
-            "36\n",
-            "37\n",
-            "38\n",
-            "39\n",
-            "40\n",
-            "41\n",
-            "42\n",
-            "43\n",
-            "44\n",
-            "45\n",
-            "46\n",
-            "47\n",
-            "48\n",
-            "49\n",
-            "50\n",
-            "51\n",
-            "52\n",
-            "53\n",
-            "54\n",
-            "55\n",
-            "56\n",
-            "57\n",
-            "58\n",
-            "59\n",
-            "60\n",
-            "61\n",
-            "62\n",
-            "63\n",
-            "64\n",
-            "65\n",
-            "66\n",
-            "67\n",
-            "68\n",
-            "69\n",
-            "70\n",
-            "71\n",
-            "72\n",
-            "73\n",
-            "74\n",
-            "75\n",
-            "76\n",
-            "77\n",
-            "78\n",
-            "79\n",
-            "80\n",
-            "81\n",
-            "82\n",
-            "83\n",
-            "84\n",
-            "85\n",
-            "86\n",
-            "87\n",
-            "88\n",
-            "89\n",
-            "90\n",
-            "91\n",
-            "92\n",
-            "93\n",
-            "94\n",
-            "95\n",
-            "96\n",
-            "97\n",
-            "98\n",
-            "99\n",
-            "100\n"
+            "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 "
           ]
         }
       ]
@@ -1209,36 +1087,22 @@
         "#modulus return remainder after division, which is zero when 1st number is divisible by 2nd number\n",
         "for i in range(101):\n",
         "  if(i%7 == 0):\n",
-        "    print(i)"
+        "    print(i, end=' ')"
       ],
       "metadata": {
         "id": "0DEwJZ4qdq1U",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9ce430a1-a68c-4b0e-8e4b-bff486f7eddc"
+        "outputId": "74305ef0-ca13-4790-e895-0ba8cec84247"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n",
-            "7\n",
-            "14\n",
-            "21\n",
-            "28\n",
-            "35\n",
-            "42\n",
-            "49\n",
-            "56\n",
-            "63\n",
-            "70\n",
-            "77\n",
-            "84\n",
-            "91\n",
-            "98\n"
+            "0 7 14 21 28 35 42 49 56 63 70 77 84 91 98 "
           ]
         }
       ]
@@ -1249,35 +1113,22 @@
         "# and keyword is equivalent to && in other languages, != means not equal\n",
         "for i in range(101):\n",
         "  if(i%5 == 0 and i%3 != 0):\n",
-        "    print(i)"
+        "    print(i, end=' ')"
       ],
       "metadata": {
         "id": "ICY3ryGSdqqm",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e36a94b-64ab-4fb4-8751-897a3e75b0af"
+        "outputId": "d4277f9d-6d61-426a-feae-c2bdf8210d99"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5\n",
-            "10\n",
-            "20\n",
-            "25\n",
-            "35\n",
-            "40\n",
-            "50\n",
-            "55\n",
-            "65\n",
-            "70\n",
-            "80\n",
-            "85\n",
-            "95\n",
-            "100\n"
+            "5 10 20 25 35 40 50 55 65 70 80 85 95 100 "
           ]
         }
       ]
@@ -1334,11 +1185,11 @@
         "for x in range(2,20): print(x,f(x))"
       ],
       "metadata": {
-        "id": "L1-I6Z6RrWRw",
-        "outputId": "e757805c-1680-4d30-98e0-3e64969784cf",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "L1-I6Z6RrWRw",
+        "outputId": "e757805c-1680-4d30-98e0-3e64969784cf"
       },
       "execution_count": 4,
       "outputs": [
@@ -1417,11 +1268,11 @@
         "  i += 7"
       ],
       "metadata": {
-        "id": "Mc4qBA34pE6R",
-        "outputId": "87b264c2-11a6-4d5a-a97a-eb8578c528a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Mc4qBA34pE6R",
+        "outputId": "87b264c2-11a6-4d5a-a97a-eb8578c528a5"
       },
       "execution_count": 3,
       "outputs": [
@@ -1633,11 +1484,11 @@
         "print(number)"
       ],
       "metadata": {
-        "id": "u7BpFQhLsUCJ",
-        "outputId": "891b38a1-4fa5-4565-ccc8-dcc0bf874bd1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u7BpFQhLsUCJ",
+        "outputId": "891b38a1-4fa5-4565-ccc8-dcc0bf874bd1"
       },
       "execution_count": 7,
       "outputs": [
@@ -1661,11 +1512,11 @@
         "print(n)"
       ],
       "metadata": {
-        "id": "vzxM7ZKyts8C",
-        "outputId": "287e980f-99c5-41c9-b355-80e84b0a492d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vzxM7ZKyts8C",
+        "outputId": "287e980f-99c5-41c9-b355-80e84b0a492d"
       },
       "execution_count": 6,
       "outputs": [
