--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyNGRIOohDOM+RgvpFa+KjKQ",
+      "authorship_tag": "ABX9TyMFKQCHaJ0q1uNC05p6jgMx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,61 @@
     {
       "cell_type": "code",
       "source": [
+        "#show different behavior\n",
+        "a = [[]] * 3 # all same memory location\n",
+        "b = [[] for _ in range(3)] # 3 different memory locations\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "hR9YjaCx6Osu",
+        "outputId": "5b0731a4-6fda-43b5-92dc-837739faf1f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[], [], []]\n",
+            "[[], [], []]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[0].append(3)\n",
+        "b[0].append(3)\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "id": "UN0f0Hnp7WFN",
+        "outputId": "e1b92539-718d-4bdb-edf7-b0277aefc989",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[3], [3], [3]]\n",
+            "[[3], [], []]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#just print as you go\n",
         "myList = ['cat', 'dog', 3]\n",
         "def printmylist(a):\n",
@@ -57,7 +112,7 @@
         "id": "QI1NtOeC4geT",
         "outputId": "4be56de9-b0b5-47a9-fdf0-be12af863781"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,7 +142,7 @@
         "id": "IRIvegHr5uA8",
         "outputId": "281697b9-d0e3-4398-f515-39a3acebd600"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +173,7 @@
         "id": "nL7jU2945t7N",
         "outputId": "065c3b21-f946-4ef2-bba6-079a2b5ba44b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +213,7 @@
       "metadata": {
         "id": "iJHVWHa85x6Q"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +225,7 @@
       "metadata": {
         "id": "n9qe9fbg5x1t"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -182,7 +237,7 @@
       "metadata": {
         "id": "aJa3EQZ35vxg"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +253,7 @@
         "id": "cSnxJbeG5vsb",
         "outputId": "d8d96008-68a9-48af-f732-7e5c4a57aec3"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -221,7 +276,7 @@
       "metadata": {
         "id": "TewCDgVe5vWV"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -233,7 +288,7 @@
       "metadata": {
         "id": "NggyIlCW5vQj"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +305,7 @@
         "id": "KC4HmnvG4gEK",
         "outputId": "29a66973-8feb-4097-fc2c-a292f8809122"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -284,7 +339,7 @@
         "id": "NoaKx4-Ob7b_",
         "outputId": "120a080f-3b19-4d91-9b19-fd748760ba62"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -324,7 +379,7 @@
         "id": "sIE7gS6weR_F",
         "outputId": "c336edfa-07d0-4d49-a3eb-d1aba05a8866"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -354,7 +409,7 @@
         "id": "w0AsrViL4YRu",
         "outputId": "ff793df7-0f61-40a1-c8b1-8c8019620fbe"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -383,7 +438,7 @@
         },
         "outputId": "a9c92d4f-5e2b-419d-c7d0-0e031ea94e18"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +489,7 @@
         },
         "outputId": "dffefea0-688e-4742-8b87-356f8f803f02"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +544,7 @@
         },
         "outputId": "654552f5-5a3a-4e51-9492-40ea18f9c5aa"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,7 +585,7 @@
         },
         "outputId": "477f284a-3e3e-4983-bcdd-97b6dee3a10a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +627,7 @@
         },
         "outputId": "f59fbaa6-1962-4940-d40a-53b1e23e427d"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -624,7 +679,7 @@
         },
         "outputId": "4c5dcc39-2fcb-44dc-8139-bff4187ba980"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -668,7 +723,7 @@
         },
         "outputId": "fd2f133c-b5f7-49b5-8270-e3bff0aff882"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -682,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "1WZMhQQP2N0J",
         "colab": {
@@ -736,7 +791,7 @@
         },
         "outputId": "ef514cf2-0b45-48f6-c956-9e04efba434e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -776,7 +831,7 @@
         "id": "z3R1xUxDiJVF",
         "outputId": "31652cc4-1329-4a9b-8c86-99a0062293dd"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -823,7 +878,7 @@
         },
         "outputId": "106411eb-3510-40b9-b53a-35251b204edd"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -875,7 +930,7 @@
         },
         "outputId": "85933d42-3f6d-4efc-a6dc-a37469763372"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -920,7 +975,7 @@
         "id": "-M2X4JCtKuzi",
         "outputId": "84f34000-af45-4108-febf-b494f1fd9e95"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -981,7 +1036,7 @@
         },
         "outputId": "d1cda023-a86e-49bf-d213-a99b5e840c43"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1019,7 +1074,7 @@
         },
         "outputId": "b678acb8-53ca-4248-8b06-e6af1d0387d5"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1069,7 +1124,7 @@
         },
         "outputId": "dcc50419-f1a1-46f4-e533-a003f1d33a53"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1111,7 +1166,7 @@
         },
         "outputId": "ea09de7a-cc4a-4960-c3f7-d4700e835f66"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1157,7 +1212,7 @@
         },
         "outputId": "e4d5b54e-e016-4e84-8d20-143a5f252549"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1197,7 +1252,7 @@
         },
         "outputId": "6ea70a00-5884-4a6b-a40d-71a63596e307"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1248,7 +1303,7 @@
         },
         "outputId": "ba0effbc-6f7f-492d-dfd3-659ed5a1b8fe"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1278,7 +1333,7 @@
         "id": "6N-MnU0XzNjI",
         "outputId": "60b7ed0c-5a73-44e5-9445-29ff3ab7d79e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,7 +1379,7 @@
         },
         "outputId": "62009e12-1c50-4144-e16a-2fc6bc894c6b"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1394,7 +1449,7 @@
         "id": "gz1m-FNo91Id",
         "outputId": "5bf8ba44-3771-46b3-b546-b65c5c8d1004"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1556,7 +1611,7 @@
         },
         "outputId": "81a58419-23b8-4197-83a1-eb5c059f2316"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1588,7 +1643,7 @@
         },
         "outputId": "bb6d8cbc-7e9d-4a78-9527-d8cf7f3b89b8"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1620,7 +1675,7 @@
         },
         "outputId": "e18bdda3-f5a7-4059-b41f-b8c568cd0f26"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1653,7 +1708,7 @@
         },
         "outputId": "f983623c-f975-44ab-d490-43b332d65eaa"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1686,7 +1741,7 @@
         },
         "outputId": "b3f0f0cb-fde0-46f4-f9e8-69dd5226b8ed"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1720,7 +1775,7 @@
         },
         "outputId": "fbb7ad51-a9fa-4f1e-a457-2655f443f771"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1753,7 +1808,7 @@
       "metadata": {
         "id": "Ex4og2qPXWEA"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     }
   ]
