--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyMFKQCHaJ0q1uNC05p6jgMx",
+      "authorship_tag": "ABX9TyPWNHF0xYwGAcuvnfqoHEA8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,11 +50,11 @@
         "print(b)"
       ],
       "metadata": {
-        "id": "hR9YjaCx6Osu",
-        "outputId": "5b0731a4-6fda-43b5-92dc-837739faf1f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hR9YjaCx6Osu",
+        "outputId": "5b0731a4-6fda-43b5-92dc-837739faf1f9"
       },
       "execution_count": 6,
       "outputs": [
@@ -77,11 +77,11 @@
         "print(b)"
       ],
       "metadata": {
-        "id": "UN0f0Hnp7WFN",
-        "outputId": "e1b92539-718d-4bdb-edf7-b0277aefc989",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UN0f0Hnp7WFN",
+        "outputId": "e1b92539-718d-4bdb-edf7-b0277aefc989"
       },
       "execution_count": 7,
       "outputs": [
@@ -91,6 +91,39 @@
           "text": [
             "[[3], [3], [3]]\n",
             "[[3], [], []]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in a:\n",
+        "  print(id(i), i)\n",
+        "print()\n",
+        "for i in b:\n",
+        "  print(id(i), i)"
+      ],
+      "metadata": {
+        "id": "u6D5auWG8Py0",
+        "outputId": "3d797bdb-1717-4e72-de69-1972ff00ecb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "139871603490560 [3]\n",
+            "139871603490560 [3]\n",
+            "139871603490560 [3]\n",
+            "\n",
+            "139871602996560 [3]\n",
+            "139871602996720 []\n",
+            "139871603433552 []\n"
           ]
         }
       ]
@@ -625,9 +658,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f59fbaa6-1962-4940-d40a-53b1e23e427d"
+        "outputId": "2c4b21fd-5a64-42dd-ac5a-351766654581"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -661,7 +694,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 12
         }
       ]
     },
@@ -677,9 +710,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c5dcc39-2fcb-44dc-8139-bff4187ba980"
+        "outputId": "f8856ea4-9efa-480e-95f6-725795c53809"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -698,7 +731,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 13
         }
       ]
     },
@@ -712,26 +745,27 @@
         "      return False\n",
         "  return True\n",
         "\n",
-        "l3 = [i+j if isprime(i) and isprime(j) for i in range(n) for j in range(i)]\n",
+        "l3 = [i+j  for i in range(n) for j in range(i) if isprime(i) and isprime(j)]\n",
         "l3"
       ],
       "metadata": {
         "id": "4k5W3tsY6A_b",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd2f133c-b5f7-49b5-8270-e3bff0aff882"
+        "outputId": "c9a93bf4-7301-40ac-d8a5-0ba7ae8054dd"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-38c66f1bcd8f>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    l3 = [i+j if isprime(i) and isprime(j) for i in range(n) for j in range(i)]\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 3, 4, 5]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
         }
       ]
     },
@@ -775,6 +809,32 @@
       "metadata": {
         "id": "4dGeUx-n4QrV"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(lambda x, coefs: sum([a*(x**i) for i,a in enumerate(coefs)]))(2,[2,3,5])"
+      ],
+      "metadata": {
+        "id": "HPnfvyrj-hVe",
+        "outputId": "2f2e9b95-7dc2-4720-a135-c0fbccd8562e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "28"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -832,6 +892,31 @@
         "outputId": "31652cc4-1329-4a9b-8c86-99a0062293dd"
       },
       "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 2, 3, 0, 1, 9, 8, 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lol = [[1,2,2],[3,0,1],[9,8,2]]\n",
+        "f = lambda lists: [elem for l in lists for elem in l]\n",
+        "print(f(lol))"
+      ],
+      "metadata": {
+        "id": "dD7d96yp_2v-",
+        "outputId": "abec06ad-c109-4155-a366-c933bec99fbb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
