--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyPWNHF0xYwGAcuvnfqoHEA8",
+      "authorship_tag": "ABX9TyNS0+X14Rgv5ixIO2hgxB/A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -105,11 +105,11 @@
         "  print(id(i), i)"
       ],
       "metadata": {
-        "id": "u6D5auWG8Py0",
-        "outputId": "3d797bdb-1717-4e72-de69-1972ff00ecb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u6D5auWG8Py0",
+        "outputId": "3d797bdb-1717-4e72-de69-1972ff00ecb7"
       },
       "execution_count": 10,
       "outputs": [
@@ -816,11 +816,11 @@
         "(lambda x, coefs: sum([a*(x**i) for i,a in enumerate(coefs)]))(2,[2,3,5])"
       ],
       "metadata": {
-        "id": "HPnfvyrj-hVe",
-        "outputId": "2f2e9b95-7dc2-4720-a135-c0fbccd8562e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "HPnfvyrj-hVe",
+        "outputId": "2f2e9b95-7dc2-4720-a135-c0fbccd8562e"
       },
       "execution_count": 15,
       "outputs": [
@@ -910,11 +910,11 @@
         "print(f(lol))"
       ],
       "metadata": {
-        "id": "dD7d96yp_2v-",
-        "outputId": "abec06ad-c109-4155-a366-c933bec99fbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dD7d96yp_2v-",
+        "outputId": "abec06ad-c109-4155-a366-c933bec99fbb"
       },
       "execution_count": 16,
       "outputs": [
@@ -974,6 +974,44 @@
             "['Where', 'are', 'the', 'watchers', 'of', 'football']\n",
             "watchers\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# alternatively\n",
+        "def find_the_longest(sentence: str) -> str:\n",
+        "  clean = \"\".join([char for char in sentence if char.isalpha() or char.isspace()])\n",
+        "  longest = \"\"\n",
+        "  for word in clean.split(' '):\n",
+        "    if len(word) > len(longest):\n",
+        "      longest = word\n",
+        "  return longest\n",
+        "find_the_longest(\"Hello darkness my old friend. I've come to speak with you again.\")"
+      ],
+      "metadata": {
+        "id": "kuQtBbMcA2Q-",
+        "outputId": "7752cad0-99cb-4369-fadb-ee9e635dc740",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'darkness'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 19
         }
       ]
     },
