--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyNS0+X14Rgv5ixIO2hgxB/A",
+      "authorship_tag": "ABX9TyNBBqQpW44H9OahFXxY16pt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -988,30 +988,42 @@
         "    if len(word) > len(longest):\n",
         "      longest = word\n",
         "  return longest\n",
-        "find_the_longest(\"Hello darkness my old friend. I've come to speak with you again.\")"
+        "find_the_longest(\"Hello, darkness, my old friend. I've come to speak with you again. Because a vision softly  \" +\n",
+        "                 \"creeping left its seeds while I was sleeping. And the vision that was planted in my brain still  \" +\n",
+        "                 \"remains within the sound of silence. In restless dreams I walked alone, narrow streets of  \" +\n",
+        "                 \"cobblestone. 'Neath the halo of a street lamp, I turned my collar to the cold and damp. When my  \" +\n",
+        "                 \"eyes were stabbed by the flash of a neon light. That split the night and touched the sound of  \" +\n",
+        "                 \"silence. And in the naked light I saw Ten thousand people, maybe more. People talking without  \" +\n",
+        "                 \"speaking, People hearing without listening People writing songs that voices never share And no one \" +\n",
+        "                 \"dared Disturb the sound of silence. 'Fools', said I, 'You do not know the Silence, like a cancer, \" + \n",
+        "                 \"grows Hear my words that I might teach you Take my arms that I might reach you'  But my words like \" +\n",
+        "                 \"silent raindrops fell And echoed in the wells of silence And the people bowed and prayed To the  \" +\n",
+        "                 \"neon god they made And the sign flashed out its warning In the words that it was forming And the  \" +\n",
+        "                 \"sign said 'The words of the prophets are written on the subway walls And tenement halls And  \" +\n",
+        "                 \"whispered in the sound Of silence\")"
       ],
       "metadata": {
-        "id": "kuQtBbMcA2Q-",
-        "outputId": "7752cad0-99cb-4369-fadb-ee9e635dc740",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "kuQtBbMcA2Q-",
+        "outputId": "3fd59cc8-a634-4ee2-faba-dfbc416580ef"
       },
-      "execution_count": 19,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'darkness'"
+              "'cobblestone'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 25
         }
       ]
     },
