--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyNBBqQpW44H9OahFXxY16pt",
+      "authorship_tag": "ABX9TyPWSPtjTzIZJYPZqL+3G82b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1049,9 +1049,9 @@
         "  colz = []\n",
         "  while(n != 1):\n",
         "    colz.append(n)\n",
-        "    if(n%2 == 0):\n",
+        "    if(n%2 == 0): # if even\n",
         "      n = (int)(n/2)\n",
-        "    else:\n",
+        "    else: # if odd\n",
         "      n = 3*n + 1\n",
         "  colz.append(n)\n",
         "  return colz\n",
@@ -1120,6 +1120,30 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternative approach\n",
+        "def alt_longcollatz(n):\n",
+        "  longest = 0\n",
+        "  seqlen = 0\n",
+        "  maxcollatz = [0]\n",
+        "  for x in range(1,n+1):\n",
+        "    maxcollatz.append(collatz(x))\n",
+        "  seqlen = max(maxcollatz)\n",
+        "  longest = maxcollatz.index(seqlen)\n",
+        "  return longest, seqlen\n",
+        "\n",
+        "n = 30\n",
+        "i, s = longcollatz(n)\n",
+        "print(\"integer less than {} leading to the longest Collatz sequence is {}, with sequence length {}\".format(n,i,s))"
+      ],
+      "metadata": {
+        "id": "NDGawkWftwoO"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1311,6 +1335,23 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternatively\n",
+        "l1 = [1,2,3]\n",
+        "l2 = [4,5,6]\n",
+        "zipped = list(zip(l1,l2))\n",
+        "print(*zipped)\n",
+        "x, y = zip(*zipped)\n",
+        "print(x, y)"
+      ],
+      "metadata": {
+        "id": "qh5ycr4g1w_S"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
