--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyPWSPtjTzIZJYPZqL+3G82b",
+      "authorship_tag": "ABX9TyMRx3jpEl7ihqjOluPlf8o3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1414,8 +1414,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#\n",
-        "dict = {\"cat\":1, \"beach\":2,7:3}\n",
+        "#pretty standard\n",
+        "dict = {\"cat\":1, \"beach\":2, 7:3}\n",
         "def dprint(dict):\n",
         "  for i in dict:\n",
         "    print(\"key:\",i,\", value:\",dict[i])\n",
@@ -1440,6 +1440,21 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternatively\n",
+        "def dictprint(d: dict):\n",
+        "  for k, v in zip(d.keys(), d.values()):\n",
+        "    print(k, v)\n",
+        "dictprint({'a':1,'b':-1,'g':'g'})"
+      ],
+      "metadata": {
+        "id": "yaE0mMrL3GBn"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
