--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyMRx3jpEl7ihqjOluPlf8o3",
+      "authorship_tag": "ABX9TyNRpkq0t91ueZUnOw3S8Oxt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1634,133 +1634,41 @@
         "!cat /content/Markov-chain-startercode/markov.py"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gz1m-FNo91Id",
-        "outputId": "5bf8ba44-3771-46b3-b546-b65c5c8d1004"
+        "id": "gz1m-FNo91Id"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'Markov-chain-startercode'...\n",
-            "remote: Enumerating objects: 16, done.\u001b[K\n",
-            "remote: Total 16 (delta 0), reused 0 (delta 0), pack-reused 16\u001b[K\n",
-            "Unpacking objects: 100% (16/16), done.\n",
-            "import random\n",
-            "import sys\n",
-            "\n",
-            "def process_line(line):\n",
-            "    '''\n",
-            "    Process a line of text to extract (state, new_word) pairs.\n",
-            "    Note that we remove uppercase letters in this example, though\n",
-            "    you don't have to.\n",
-            "\n",
-            "    Example:\n",
-            "    process_line(\"In winter I get up at night\") =\n",
-            "    [('BEGIN', 'in'),\n",
-            "     ('in', 'winter'),\n",
-            "     ('winter', 'i'),\n",
-            "     ('i', 'get'),\n",
-            "     ('get', 'up'),\n",
-            "     ('up', 'at'),\n",
-            "     ('at', 'night'),\n",
-            "     ('night', 'END')]\n",
-            "\n",
-            "    We add the BEGIN and END keywords so that we can initialize the\n",
-            "    sentence and know when the line ends.\n",
-            "    '''\n",
-            "\n",
-            "    # YOUR CODE HERE #\n",
-            "    # * line_dict should be global to allow single dictionary * #\n",
-            "    split_line = line.split(\" \")\n",
-            "    line_dict = {'BEGIN':split_line[0]}\n",
-            "    end = len(split_line)\n",
-            "  \n",
-            "    for i in range(end-1):\n",
-            "      #doesn't overwrite existing keys\n",
-            "      #line_dict[split_line[i]] = split_line[i+1]\n",
-            "\n",
-            "      #overwrites existing keys\n",
-            "      line_dict.update( { split_line[i]: split_line[i+1]} )\n",
-            "    line_dict.update( { split_line[end]: 'END'} )\n",
-            "    #line_dict[split_line[end]] = 'END'\n",
-            "    \n",
-            "    #return line_dict\n",
-            "    return list(line_dict.items())\n",
-            "\n",
-            "def process_textfile(filename):\n",
-            "    '''\n",
-            "    Creates a dictionary with transition pairs\n",
-            "    based on a file provided\n",
-            "\n",
-            "    For the first part of the assignment, we use a\n",
-            "    placeholder text that you will have to replace\n",
-            "    at some point.\n",
-            "\n",
-            "    Based on the placeholder text, the dictionary\n",
-            "    should contain the following key-value pairs:\n",
-            "\n",
-            "    'blue,': ['END']\n",
-            "    'by': ['yellow', 'day.', 'day?']\n",
-            "    'still': ['hopping', 'going']\n",
-            "    '''\n",
-            "    d = {}\n",
-            "\n",
-            "    # Placeholder until we add File I/O in part two\n",
-            "    # Overwrite the following lines with your code:\n",
-            "    f = '''In winter I get up at night\n",
-            "And dress by yellow candle-light.\n",
-            "In summer quite the other way,\n",
-            "I have to go to bed by day.\n",
-            "\n",
-            "I have to go to bed and see\n",
-            "The birds still hopping on the tree,\n",
-            "Or hear the grown-up people's feet\n",
-            "Still going past me in the street.\n",
-            "\n",
-            "And does it not seem hard to you,\n",
-            "When all the sky is clear and blue,\n",
-            "And I should like so much to play,\n",
-            "To have to go to bed by day?\n",
-            "'''.split('\\n')\n",
-            "    # text from http://www.bygosh.com/Features/082000/rhymes.htm\n",
-            "\n",
-            "    # YOUR CODE HERE #\n",
-            "\n",
-            "    return d\n",
-            "\n",
-            "def generate_line(d):\n",
-            "    '''\n",
-            "    Generates a random sentence based on the dictionary\n",
-            "    with transition pairs\n",
-            "\n",
-            "    Note that the first state is BEGIN but that we\n",
-            "    obviously do not want to return BEGIN\n",
-            "\n",
-            "    Some sample output based on the placeholder text:\n",
-            "    'i have to go to go to go to go to play,'\n",
-            "\n",
-            "    Hint: use random.choice to select a random element from a list\n",
-            "    '''\n",
-            "\n",
-            "    # YOUR CODE HERE #\n",
-            "\n",
-            "    pass\n",
-            "\n",
-            "if __name__ == '__main__':\n",
-            "    if len(sys.argv) != 2:\n",
-            "        print ('ERROR: Run as python markov.py <filename>')\n",
-            "        exit()\n",
-            "\n",
-            "    d = process_textfile(sys.argv[1])\n",
-            "    print (generate_line(d))"
-          ]
-        }
-      ]
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def process_line(line: str):\n",
+        "  words = line.lower().split(' ')\n",
+        "  w1 = ['BEGIN'] + words\n",
+        "  w2 = words + ['END']\n",
+        "  return zip(w1, w2)\n",
+        "\n",
+        "def process_file(filename: str):\n",
+        "  d = {}\n",
+        "  lines = dummy_text.split('\\n')\n",
+        "  for line in lines:\n",
+        "    for prev, next in process_line(line):\n",
+        "      d[prev] = d.get(prev, [])\n",
+        "      if next not in d[prev]:\n",
+        "        d[prev].append(next)\n",
+        "  return generate(d)\n",
+        "\n",
+        "def generate(d: dict):\n",
+        "  message = ['BEGIN']\n",
+        "  while message[-1] != 'END':\n",
+        "    message.append(random.choice(d[message[-1]]))\n",
+        "  return \" \".join(message[1:-1])\n"
+      ],
+      "metadata": {
+        "id": "xfch_OYZFd0c"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
