--- a/MichailSeth_E2.ipynb
+++ b/MichailSeth_E2.ipynb
@@ -6,7 +6,7 @@
       "name": "MichailSeth_E2.ipynb",
       "provenance": [],
       "mount_file_id": "1wb9Fq7jpchVMcIe9WKahGHE3K1OH04aL",
-      "authorship_tag": "ABX9TyNRpkq0t91ueZUnOw3S8Oxt",
+      "authorship_tag": "ABX9TyMWSZeQtuxl5BilqtqGnSsy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -988,7 +988,7 @@
         "    if len(word) > len(longest):\n",
         "      longest = word\n",
         "  return longest\n",
-        "find_the_longest(\"Hello, darkness, my old friend. I've come to speak with you again. Because a vision softly  \" +\n",
+        "sample_text = \"Hello, darkness, my old friend. I've come to speak with you again. Because a vision softly  \" +\n",
         "                 \"creeping left its seeds while I was sleeping. And the vision that was planted in my brain still  \" +\n",
         "                 \"remains within the sound of silence. In restless dreams I walked alone, narrow streets of  \" +\n",
         "                 \"cobblestone. 'Neath the halo of a street lamp, I turned my collar to the cold and damp. When my  \" +\n",
@@ -1000,7 +1000,8 @@
         "                 \"silent raindrops fell And echoed in the wells of silence And the people bowed and prayed To the  \" +\n",
         "                 \"neon god they made And the sign flashed out its warning In the words that it was forming And the  \" +\n",
         "                 \"sign said 'The words of the prophets are written on the subway walls And tenement halls And  \" +\n",
-        "                 \"whispered in the sound Of silence\")"
+        "                 \"whispered in the sound Of silence\"\n",
+        "find_the_longest(sample_text)"
       ],
       "metadata": {
         "colab": {
@@ -1662,7 +1663,9 @@
         "  message = ['BEGIN']\n",
         "  while message[-1] != 'END':\n",
         "    message.append(random.choice(d[message[-1]]))\n",
-        "  return \" \".join(message[1:-1])\n"
+        "  return \" \".join(message[1:-1])\n",
+        "\n",
+        "print(process_file(sample_text))"
       ],
       "metadata": {
         "id": "xfch_OYZFd0c"
@@ -1724,6 +1727,18 @@
     {
       "cell_type": "code",
       "source": [
+        "#alternatively\n",
+        "f = lambda xs,ys: [x + y for x, y in zip(xs, ys)]"
+      ],
+      "metadata": {
+        "id": "_sKcMd6fL8Or"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#dot product is sum of element-wise product, i.e. a scalar\n",
         "def vmul(d1,d2):\n",
         "  total = 0\n",
@@ -1756,6 +1771,17 @@
     {
       "cell_type": "code",
       "source": [
+        "#alternatively"
+      ],
+      "metadata": {
+        "id": "W_44_YSKMAYP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#add 2 dictionaries, check length and presence of keys\n",
         "def sadd(s1,s2):\n",
         "  if len(s1) == len(s2):\n",
@@ -1784,6 +1810,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternatively"
+      ],
+      "metadata": {
+        "id": "zEged5FtMAgK"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1821,6 +1858,17 @@
     {
       "cell_type": "code",
       "source": [
+        "#alternatively"
+      ],
+      "metadata": {
+        "id": "NwID0_rxMAoJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#add list to dictionary, check length and presence of keys, yada yada\n",
         "def sdadd(s,d):\n",
         "  if len(s) == len(d):\n",
@@ -1850,6 +1898,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternatively"
+      ],
+      "metadata": {
+        "id": "9bvtZwW_MAw_"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1884,6 +1943,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternatively"
+      ],
+      "metadata": {
+        "id": "6homlw90MBmR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#alternatively"
+      ],
+      "metadata": {
+        "id": "x8hAOKpPMBpH"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
